--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>git practice
     </title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
     <h1>hello world</h1>
     <h2>i have some changes in git project file the commit it version 2 V2</h2>
-    <h3>new update v3 update</h3>
-
-</body>
+</head>
+<body>
+    
+</body>s
 </html>
