--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git practice
-    </title>
+    <title>git practice</title>
     <h1>hello world</h1>
     <h2>i have some changes in git project file the commit it version 2 V2</h2>
 </head>
 <body>
     
-</body>s
+</body>
 </html>
