changing in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>git practice</title>
     <h1>hello world</h1>
     <h2>i have some changes in git project file the commit it version 2 V2</h2>
+    <h3>fayaz merging</h3>
+  
 </head>
 <body>
     
